--- a/ci-operator/config/openshift/insights-operator/openshift-insights-operator-master.yaml
+++ b/ci-operator/config/openshift/insights-operator/openshift-insights-operator-master.yaml
@@ -87,7 +87,7 @@ tests:
     test:
     - as: test
       cli: latest
-      commands: pytest.sh -m "not ui and not tp_only"
+      commands: pytest.sh -m "not ui and not tp_only" --junitxml=${pwd}/test-report.xml
       credentials:
       - mount_path: /secrets
         name: insights-qa
@@ -107,7 +107,7 @@ tests:
     test:
     - as: test
       cli: latest
-      commands: pytest.sh -k "not tp_only" --junitxml=${ARTIFACT_DIR}/test-report.xml
+      commands: pytest.sh -k "not tp_only" --junitxml=${pwd}/test-report.xml
       credentials:
       - mount_path: /secrets
         name: insights-qa
@@ -127,7 +127,7 @@ tests:
     test:
     - as: test
       cli: latest
-      commands: pytest.sh -k "test_archive_uploaded_and_result_received" --junitxml=${ARTIFACT_DIR}/test-report.xml
+      commands: pytest.sh -k "test_archive_uploaded_and_result_received" --junitxml=${pwd}/test-report.xml
       from: insights-operator-tests
       resources:
         requests:
