--- a/ci-operator/step-registry/rosa/aws/sts/rosacli-e2e/rosa-aws-sts-rosacli-e2e-workflow.yaml
+++ b/ci-operator/step-registry/rosa/aws/sts/rosacli-e2e/rosa-aws-sts-rosacli-e2e-workflow.yaml
@@ -9,9 +9,11 @@ workflow:
       MAX_REPLICAS: "6"
       ETCD_ENCRYPTION: "true"
       DISABLE_WORKLOAD_MONITORING: "false"
+      STS: "true"
     pre:
     - chain: rosa-aws-sts-provision
     post:
-    - chain: rosa-aws-sts-deprovision
+    - ref: rosa-cluster-deprovision
+    - ref: rosa-sts-account-roles-delete
   documentation: |-
     This workflow installs a rosa sts cluster. After finish testing, the cluster will be deprovsioned.
