--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.14-nightly-x86.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.14-nightly-x86.yaml
@@ -36,6 +36,22 @@ tests:
     - chain: openshift-qe-control-plane
     workflow: rosa-aws-sts
   timeout: 6h0m0s
+- as: perfscale-rosa-multiaz-data-path-9nodes-periodic
+  cron: 0 13 * * 2
+  steps:
+    cluster_profile: aws-perfscale-qe
+    env:
+      CHANNEL_GROUP: nightly
+      COMPUTE_MACHINE_TYPE: m5.xlarge
+      CONFIG: config/standard-classic-rosa.yml
+      ENABLE_AUTOSCALING: "false"
+      MULTI_AZ: "true"
+      OPENSHIFT_VERSION: "4.14"
+      REPLICAS: "9"
+    test:
+    - chain: openshift-qe-data-path-tests
+    workflow: rosa-aws-sts
+  timeout: 5h0m0s
 zz_generated_metadata:
   branch: main
   org: openshift-qe
