--- a/ci-operator/step-registry/hypershift/kubevirt/baremetalds/conformance/hypershift-kubevirt-baremetalds-conformance-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/kubevirt/baremetalds/conformance/hypershift-kubevirt-baremetalds-conformance-workflow.yaml
@@ -43,6 +43,7 @@ workflow:
         NETWORK_TYPE=OVNKubernetes
         NUM_WORKERS=2
         WORKER_VCPU=16
+        MASTER_MEMORY=20480
         WORKER_MEMORY=65536
         VM_EXTRADISKS=true
         VM_EXTRADISKS_LIST=vda
