--- a/ci-operator/jobs/openshift/distributed-tracing-qe/openshift-distributed-tracing-qe-main-periodics.yaml
+++ b/ci-operator/jobs/openshift/distributed-tracing-qe/openshift-distributed-tracing-qe-main-periodics.yaml
@@ -14,6 +14,17 @@ periodics:
     job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   name: periodic-ci-openshift-distributed-tracing-qe-main-distributed-tracing-tests
+  reporter_config:
+    slack:
+      channel: '#distributed-tracing-qe'
+      job_states_to_report:
+      - success
+      - failure
+      - error
+      report_template: '{{if eq .Status.State "success"}} :slack-green: Job *{{.Spec.Job}}*
+        ended with *{{.Status.State}}*. <{{.Status.URL}}|View logs> {{else}} :failed:
+        Job *{{.Spec.Job}}* ended with *{{.Status.State}}*. <{{.Status.URL}}|View
+        logs> {{end}}'
   spec:
     containers:
     - args:
