--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -95,6 +95,24 @@ tests:
   cron: 0 4 * * *
   steps:
     workflow: hypershift-powervs-e2e
+- as: hypershift-hostedcluster-e2e
+  cron: 0 4 * * *
+  steps:
+    env:
+      POWERVS_HYPERSHIFT_NODE_COUNT: 2
+      POWERVS_BASE_DOMAIN: hypershift-ppc64le.com
+      POWERVS_REGION: lon
+      POWERVS_ZONE: lon06
+      POWERVS_VPC_REGION: eu-gb
+      POWERVS_RESOURCE_GROUP: ibm-hypershift-dev
+      POWERVS_PROC_TYPE: shared
+      POWERVS_PROCESSORS: 0.5
+      POWERVS_SYS_TYPE: e980
+      POWERVS_GUID: 2313fc87-f7e9-4df6-969e-c0d37b8818a3
+      VPC: hypershift-clusterbot-ci-lon-vpc
+      CLOUD_CONNECTION: hypershift-clusterbot-ci-lon-cc
+      IBMCLOUD_CREDENTIALS: /etc/hypershift-pool-powervs-credentials/credentials
+    workflow: hypershift-hostedcluster-workflow
 - as: e2e-ibmcloud-iks
   cron: 0 4 * * *
   steps:
