--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.13-nightly-x86.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.13-nightly-x86.yaml
@@ -22,7 +22,7 @@ resources:
       memory: 200Mi
 tests:
 - as: perfscale-rosa-multiaz-control-plane-252nodes-periodic
-  cron: 0 12 * * 6
+  cron: 0 20 */14 * 0
   steps:
     cluster_profile: aws-perfscale
     env:
